--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,4 +10,17 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
     }
+    server {
+            listen 443 ssl;
+            server_name emre-bulbul.me www.emre-bulbul.me;
+
+            ssl_certificate /etc/nginx/certs/fullchain.pem;
+            ssl_certificate_key /etc/nginx/certs/privkey.pem;
+
+            location / {
+                proxy_pass http://drupal:8080;
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+            }
+        }
 }
